<resources>
    <string name="app_name">BackOnTrack</string>

    <!-- LOGIN AND REGISTRATION -->
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="email">E-mail</string>
    <string name="password_confirmation">Confirm password</string>
    <string name="dont_have_account">Don\'t have an account?</string>

    <string name="login_credentials">Login credentials</string>
    <string name="user_details">User details</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>

    <string name="terms_agreement">By signing up you agree to our terms and conditions</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="complete">Complete</string>
    <string name="save">Save</string>

    <!-- DRAWER -->
    <string name="home">Home</string>
    <string name="today_task">Today tasks</string>
    <string name="calendar">Calendar</string>
    <string name="scanner">Scanner</string>

    <!-- TASK -->
    <string name="task">Task</string>
    <string name="task_name">Name</string>
    <string name="date">Date</string>
    <string name="tag">Tag</string>
    <string name="notification">Notification</string>
    <string name="filter">Filter</string>

    <!-- TASK -->
    <string name="action_settings">Settings</string>
    <string name="taskName">Wpisz nazwę zadania</string>

</resources>
