<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <pl.krakow.uek.customfont.LatoTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_credentials"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/header_text_size"
        android:layout_marginRight="@dimen/layout_box_text_margin"
        android:layout_marginLeft="@dimen/layout_box_text_margin"
        android:layout_marginStart="@dimen/layout_box_text_margin"
        android:layout_marginEnd="@dimen/layout_box_text_margin"
        android:layout_marginTop="@dimen/layout_box_margin" />

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginRight="@dimen/layout_box_margin"
        android:layout_marginLeft="@dimen/layout_box_margin"
        android:layout_marginTop="@dimen/layout_box_margin"
        android:orientation="vertical" >

        <!-- USERNAME -->
        <pl.krakow.uek.customfont.LatoTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <pl.krakow.uek.customfont.LatoEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/invisible"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingStart="@dimen/layout_text_margin"
                android:paddingLeft="@dimen/layout_text_margin"
                android:paddingRight="@dimen/layout_text_margin"
                android:paddingTop="@dimen/layout_text_margin"
                android:textColorHint="@color/hintColor"
                android:textSize="@dimen/text_size" />
        </pl.krakow.uek.customfont.LatoTextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_width"
            android:background="@color/colorSeparator"
            android:layout_marginTop="@dimen/separator_margin"
            android:layout_marginBottom="@dimen/separator_margin" />

        <!-- PASSWORD -->
        <pl.krakow.uek.customfont.LatoTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <pl.krakow.uek.customfont.LatoEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/long_margin"
                android:background="@color/invisible"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/layout_text_margin"
                android:paddingLeft="@dimen/layout_text_margin"
                android:paddingRight="@dimen/layout_text_margin"
                android:paddingTop="@dimen/layout_text_margin"
                android:textColorHint="@color/hintColor"
                android:textSize="@dimen/text_size" />

        </pl.krakow.uek.customfont.LatoTextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_width"
            android:background="@color/colorSeparator"
            android:layout_marginTop="@dimen/separator_margin"
            android:layout_marginBottom="@dimen/separator_margin" />

        <!-- PASSWORD CONFIRMATION -->
        <pl.krakow.uek.customfont.LatoTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <pl.krakow.uek.customfont.LatoEditText
                android:id="@+id/password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/long_margin"
                android:background="@color/invisible"
                android:hint="@string/password_confirmation"
                android:inputType="textPassword"
                android:paddingStart="@dimen/layout_text_margin"
                android:paddingRight="@dimen/layout_text_margin"
                android:paddingLeft="@dimen/layout_text_margin"
                android:paddingTop="@dimen/layout_text_margin"
                android:textColorHint="@color/hintColor"
                android:textSize="@dimen/text_size" />

        </pl.krakow.uek.customfont.LatoTextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_width"
            android:background="@color/colorSeparator"
            android:layout_marginTop="@dimen/separator_margin"
            android:layout_marginBottom="@dimen/small_margin" />

        <!-- EMAIL -->
        <pl.krakow.uek.customfont.LatoTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <pl.krakow.uek.customfont.LatoEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/invisible"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingStart="@dimen/layout_text_margin"
                android:paddingLeft="@dimen/layout_text_margin"
                android:paddingRight="@dimen/layout_text_margin"
                android:paddingTop="@dimen/layout_text_margin"
                android:textColorHint="@color/hintColor"
                android:textSize="@dimen/text_size" />
        </pl.krakow.uek.customfont.LatoTextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_width"
            android:background="@color/colorSeparator"
            android:layout_marginTop="@dimen/separator_margin"
            android:layout_marginBottom="@dimen/separator_margin" />
    </LinearLayout>
</RelativeLayout>